[tool.poetry]
name = "micro-servico"
version = "0.1.0"
description = ""
authors = ["julio.santos <julio.nolasco@mail.uft.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
requests = "^2.31.0"
pytz = "^2024.1"
pytest = "^8.0.1"
requests-mock = "^1.11.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
